package lld.elevatorcontroller;

public enum Direction {
    UP, DOWN, IDLE
}
