package lld.elevatorcontroller;

public enum ElevatorStatus {
    MOVING, STOPPED, MAINTENANCE
}
